# ceiloclass

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ceiloclass/: __init__.py  _interp.py  classification.py  cli.py  detection.py  download.py  model.py  plot.py  write.py
docs/: adaptive_threshold_figure.py  whitepaper.tex
regression/: README.md  baseline.json  run.py
tests/: test_classification.py  test_detection.py  test_download.py  test_model.py  test_write.py
